# 3D-Data-Processing

./: README.md
Lab 1/3DP_lab_1/: sgm.cpp  sgm.h
Lab 2/3DP_lab_2/datasets/: output_matteo.yml
Lab 2/3DP_lab_2/output/: cloud1.ply  cloud2.ply  cloud3.ply  data1.txt  data2.txt  data3.txt  test_cloud1.ply  test_cloud2.ply
Lab 2/3DP_lab_2/src/: basic_sfm.cpp  features_matcher.cpp
Lab 2/opencv_examples/: CMakeLists.txt  README.txt
Lab 2/opencv_examples/src/: main.cpp
Lab 3/3DP Lab3/: compilation_instruction.txt
Lab 3/3DP Lab3/output/: bunny_lm.ply  bunny_svd.ply  dragon_lm.ply  dragon_svd.ply  vase_lm.ply  vase_svd.ply
Lab 3/3DP Lab3/src/: Registration.cpp
